add multiproof features to core

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -41,3 +41,4 @@ test-case = "3.2.1"
 network-analysis = ["avail-light-core/network-analysis"]
 rocksdb = ["avail-light-core/rocksdb"]
 default = ["rocksdb"]
+multiproof = ["avail-light-core/multiproof"]
