--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,7 +17,7 @@ async-trait = { workspace = true }
 base64 = "0.21.0"
 better-panic = "0.3.0"
 chrono = { workspace = true }
-clap = { workspace = true, features = ["derive"] }
+clap = { workspace = true }
 codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full", "bit-vec"] }
 convert_case = "0.6.0"
 derive_more = { version = "1", features = ["from", "display"] }
@@ -110,4 +110,5 @@ test-case = "3.2.1"
 network-analysis = []
 rocksdb = ["dep:rocksdb"]
 crawl = []
+multiproof = []
 default = []
