--- a/crawler/Cargo.toml
+++ b/crawler/Cargo.toml
@@ -21,3 +21,4 @@ tracing.workspace = true
 [features]
 rocksdb = ["avail-light-core/rocksdb"]
 default = ["rocksdb"]
+multiproof = ["avail-light-core/multiproof"]
