update avail-rust changes

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,6 +9,7 @@ description = "Avail network p2p Light Client"
 # Internal deps
 avail-light-core = { workspace = true }
 avail-rust = { workspace = true }
+kate = { workspace = true }
 
 better-panic = "0.3.0"
 chrono = { workspace = true }
