--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ repository = "https://github.com/availproject/avail-light"
 
 [workspace.dependencies]
 # Internal deps
-avail-rust = { git = "https://github.com/availproject/avail-rust.git", default-features = false }
+avail-rust = { git = "https://github.com/availproject/avail-rust.git", tag = "v0.1.11", default-features = false }
+kate = {  git = "https://github.com/availproject/avail-core", default-features = false, tag="core-node-8", features=["serde"]}
 dusk-plonk = { git = "https://github.com/availproject/plonk.git", tag = "v0.12.0-polygon-2" }
 avail-light-core = { path = "./core", default-features = false }
 
