--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ repository = "https://github.com/availproject/avail-light"
 
 [workspace.dependencies]
 # Internal deps
-avail-rust = { git = "https://github.com/availproject/avail-rust.git", branch = "pmp-test", default-features = false }
+avail-rust = { git = "https://github.com/availproject/avail-rust.git", tag = "v0.1.12", default-features = false }
 kate = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-8", features = ["serde"] }
 avail-light-core = { path = "./core", default-features = false }
 
