--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "avail-light-core"
-version = "1.2.8"
+version = "1.2.9"
 edition = "2021"
 description = "Avail Light core driving library"
 
@@ -9,7 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 # Internal deps
-dusk-plonk = { workspace = true }
+kate = { workspace = true }
 
 # 3rd-party
 async-stream = "0.3.5"
