Enable web build on CI

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -65,12 +65,13 @@ jobs:
         run: find . -name \*.profraw -type f -exec rm -f {} +
 
   wasm:
-    name: wasm
+    name: web
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           target: wasm32-unknown-unknown
-      - run: cargo build --package avail-light-core --target wasm32-unknown-unknown
-
+      - run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+      - run: wasm-pack build --target web --release
+        working-directory: web
