Polynomial Multiproof Integration on LCs (#778)

--- a/crawler/Cargo.toml
+++ b/crawler/Cargo.toml
@@ -20,4 +20,5 @@ tracing.workspace = true
 
 [features]
 rocksdb = ["avail-light-core/rocksdb"]
+multiproof = ["avail-light-core/multiproof"]
 default = ["rocksdb"]
