--- a/fat/Cargo.toml
+++ b/fat/Cargo.toml
@@ -21,4 +21,5 @@ tracing-subscriber.workspace = true
 
 [features]
 rocksdb = ["avail-light-core/rocksdb"]
+multiproof = ["avail-light-core/multiproof"]
 default = ["rocksdb"]
