--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -40,4 +40,5 @@ test-case = "3.2.1"
 [features]
 network-analysis = ["avail-light-core/network-analysis"]
 rocksdb = ["avail-light-core/rocksdb"]
+multiproof = ["avail-light-core/multiproof"]
 default = ["rocksdb"]
