--- a/crawler/Cargo.toml
+++ b/crawler/Cargo.toml
@@ -17,6 +17,7 @@ serde.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
 tracing.workspace = true
+kate-recovery = { workspace = true }
 
 [features]
 rocksdb = ["avail-light-core/rocksdb"]
