--- a/fat/Cargo.toml
+++ b/fat/Cargo.toml
@@ -8,7 +8,6 @@ repository.workspace = true
 
 [dependencies]
 avail-light-core = { workspace = true }
-avail-rust.workspace = true
 clap.workspace = true
 color-eyre.workspace = true
 confy.workspace = true
@@ -18,6 +17,7 @@ tokio.workspace = true
 tokio-stream.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+kate-recovery = { workspace = true }
 
 [features]
 rocksdb = ["avail-light-core/rocksdb"]
