Added more targets to build file

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib", "rlib"]
 kate = { workspace = true }
 kate-recovery = { workspace = true }
 avail-core = { workspace = true }
+sp-core = { workspace = true }
 
 # 3rd-party
 async-stream = "0.3.5"
