Switch to avail core (#864)
* Moved from avail_rust::avail_core to avail_core

* Added build script

* Added more targets to build file

* fmt

* fmt

* fmt

* fmt

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,6 +7,7 @@ description = "Avail network p2p Light Client"
 
 [dependencies]
 # Internal deps
+avail-core = { workspace = true }
 avail-light-core = { workspace = true }
 avail-rust = { workspace = true }
 kate = { workspace = true }
