--- a/fat/Cargo.toml
+++ b/fat/Cargo.toml
@@ -8,10 +8,10 @@ repository.workspace = true
 
 [dependencies]
 avail-light-core = { workspace = true }
-avail-rust.workspace = true
 clap.workspace = true
 color-eyre.workspace = true
 confy.workspace = true
+kate-recovery = { workspace = true }
 libp2p = { workspace = true }
 serde.workspace = true
 tokio.workspace = true
