--- a/bootstrap/Cargo.toml
+++ b/bootstrap/Cargo.toml
@@ -6,11 +6,9 @@ edition = "2021"
 description = "Avail network Bootstrap Node for p2p Light Client"
 
 [dependencies]
-avail-light-core = { workspace = true }
-
-anyhow = { workspace = true }
 async-std = { workspace = true }
 async-trait = { workspace = true }
+avail-light-core = { workspace = true }
 clap = { workspace = true }
 color-eyre = { workspace = true }
 confy = { workspace = true }
@@ -31,3 +29,7 @@ warp = { workspace = true }
 opentelemetry = { workspace = true }
 opentelemetry-otlp = { workspace = true }
 opentelemetry_sdk = { workspace = true }
+
+[features]
+rocksdb = ["avail-light-core/rocksdb"]
+default = ["rocksdb"]
