--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -77,6 +77,7 @@ tokio = { workspace = true, features = ["signal"] }
 tokio-util = "0.7.10"
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+tracing-error = "0.2"
 uuid = { workspace = true }
 void = { workspace = true }
 warp = { workspace = true }
