--- a/monitor-client/Cargo.toml
+++ b/monitor-client/Cargo.toml
@@ -12,6 +12,9 @@ avail-light-core = { workspace = true }
 clap = { workspace = true }
 color-eyre = { workspace = true }
 libp2p = { workspace = true }
+opentelemetry = { workspace = true }
+opentelemetry-otlp = { workspace = true }
+opentelemetry_sdk = { workspace = true }
 serde = { workspace = true }
 serde_json = "1.0"
 statrs = "0.16.0"
