--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ confy = "0.5.1"
 hex = "0.4.3"
 rand = { version = "0.8.5", default-features = false }
 reqwest = { version = "0.12" }
-libp2p = { version = "0.56.0", features = ["kad", "identify", "ping", "autonat", "relay", "noise", "yamux", "dns", "metrics", "tokio", "macros", "tcp", "quic", "serde", "websocket"] }
+libp2p = { version = "0.56.0", features = ["kad", "identify", "ping", "autonat", "relay", "noise", "yamux", "dns", "metrics", "tokio", "macros", "tcp", "quic", "serde", "websocket", "plaintext"] }
 libp2p-allow-block-list = "0.6.0"
 libp2p-webrtc-websys = "0.4.0"
 multihash = { version = "0.14.0", default-features = false, features = ["blake3", "sha3"] }
