fix web client build

--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -17,7 +17,6 @@ avail-rust = { workspace = true }
 clap = { workspace = true }
 console_error_panic_hook = { version = "0.1.7", optional = true }
 futures = { workspace = true }
-kate = { workspace = true }
 libp2p = { workspace = true }
 serde_json = "1.0.125"
 sp-io = { version = "30", features = ["disable_allocator", "disable_panic_handler"], default-features = false }
@@ -30,3 +29,4 @@ wasm-bindgen = "0.2.93"
 wasm-bindgen-futures = "0.4.43"
 web-sys = { version = "0.3.70", features = ["console", "Window", "UrlSearchParams"] }
 web-time = "1.1.0"
+getrandom = { version = "0.3.3", features = ["wasm_js"] }
