--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -14,6 +14,7 @@ default = ["console_error_panic_hook"]
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 avail-light-core = { workspace = true }
 avail-rust = { workspace = true }
+kate = { workspace = true }
 clap = { workspace = true }
 console_error_panic_hook = { version = "0.1.7", optional = true }
 futures = { workspace = true }
