--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ repository = "https://github.com/availproject/avail-light"
 [workspace.dependencies]
 # Internal deps
 avail-core = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-11", features = ["serde"] }
-avail-rust = { git = "https://github.com/availproject/avail-rust.git", tag = "v0.1.14-rc", default-features = false }
+avail-rust = { git = "https://github.com/availproject/avail-rust.git", rev = "0ce8cd90b0d49996ba73c08a0b446eb620586ca7", default-features = false }
 kate = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-11", features = ["serde"] }
 kate-recovery = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-11", features = ["serde"] }
 avail-light-core = { path = "./core", default-features = false }
