--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,10 @@ repository = "https://github.com/availproject/avail-light"
 
 [workspace.dependencies]
 # Internal deps
-avail-core = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-10", features = ["serde"] }
-avail-rust = { git = "https://github.com/availproject/avail-rust.git", tag = "v0.1.13", default-features = false }
-kate = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-10", features = ["serde"] }
-kate-recovery = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-10", features = ["serde"] }
+avail-core = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-11", features = ["serde"] }
+avail-rust = { git = "https://github.com/availproject/avail-rust.git", rev = "e2e02a7b6d08fb7a8cffad8c2856b742b6587b1f", default-features = false }
+kate = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-11", features = ["serde"] }
+kate-recovery = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-11", features = ["serde"] }
 avail-light-core = { path = "./core", default-features = false }
 sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-12", default-features = false, features = ["serde"] }
 
