--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
 	"monitor-client",
 	"p2p-load-test",
 	"web",
+	"avail-rust-conversion",
 ]
 default-members = ["client"]
 resolver = "2"
@@ -21,10 +22,13 @@ repository = "https://github.com/availproject/avail-light"
 # Internal deps
 avail-core = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-11", features = ["serde"] }
 avail-rust = { git = "https://github.com/availproject/avail-rust.git", rev = "e2e02a7b6d08fb7a8cffad8c2856b742b6587b1f", default-features = false }
+avail-rust-next = { package = "avail-rust-client", version = "0.4.0-rc.3", default-features = false }
 kate = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-11", features = ["serde"] }
 kate-recovery = { git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-11", features = ["serde"] }
 avail-light-core = { path = "./core", default-features = false }
 sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-12", default-features = false, features = ["serde"] }
+avail-rust-conversion = { path = "./avail-rust-conversion" }
+
 
 anyhow = "1.0.71"
 async-std = { version = "1.12.0", features = ["attributes"] }
