--- a/bootstrap/Cargo.toml
+++ b/bootstrap/Cargo.toml
@@ -20,6 +20,7 @@ rand = { workspace = true }
 semver = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true, features = ["signal"] }
+toml = "0.5.11"
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 void = { workspace = true }
