--- a/fat/Cargo.toml
+++ b/fat/Cargo.toml
@@ -17,6 +17,7 @@ serde.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
 tracing.workspace = true
+tracing-log = { workspace = true }
 tracing-subscriber.workspace = true
 
 [features]
