--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.35", default-features = false, features = ["sync", "macros", "io-util", "rt", "time"] }
 tokio-stream = { version = "0.1.15", features = ["sync"] }
 tracing = "0.1.35"
+tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
 uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
 void = "1.0.2"
